src/magnesium.h

typedef struct ObjString ObjString;
typedef struct ObjArray ObjArray;
typedef struct ObjDict ObjDict;
typedef struct ObjFunction ObjFunction;
typedef struct ObjNativeHandle ObjNativeHandle;
typedef struct VMRoot VMRoot;
typedef struct VM VM;
typedef uint64_t Value;
/* String */
struct ObjString {
    Obj obj;
    int length;
    int capacity;
    uint32_t hash;
    bool is_rope;
    char *chars;
    ObjString *left;
    ObjString *right;
};
/* Array */
struct ObjArray {
    Obj obj;
    int count;
    int capacity;
    Value *items;
};
struct ObjDict {
    Obj obj;
    int count;           /* number of active entries */
    int capacity;        /* size of indices array (power of 2) */
    uint32_t version;
    ObjString *mono_cache_key;
    DictEntry *mono_cache_entry;
    Value mono_cache_value;
    int32_t *indices;    /* probe table: 0=empty, TOMBSTONE_IDX=deleted, >0=entry index+1 */
    int entry_count;     /* total entries allocated (active + deleted) */
    int entry_capacity;  /* allocated capacity of entries array */
    DictEntry *entries;  /* compact entry array */
};
/* ========================================================================
 * Function Object (compiled bytecode + metadata)
 * ======================================================================== */
struct ObjFunction {
    Obj obj;
    int arity;           /* number of parameters */
    int upvalue_count;
    int reg_count;       /* actual number of registers used (for stack sizing) */
    Chunk chunk;
    ObjString *name;     /* NULL for top-level script */
    ObjString *source_name;
};
/* ========================================================================
 * Native Function
 * ======================================================================== */
typedef Value (*NativeFn)(VM *vm, int arg_count, Value *args);
typedef void (*NativeHandleFinalizer)(void *data);
struct ObjNativeHandle {
    Obj obj;
    void *data;
    ObjString *type_name;
    ObjDict *methods;
    NativeHandleFinalizer finalizer;
};
struct VMRoot {
    Value value;
    VMRoot *next;
};
struct VM {
    /* Call stack */
    CallFrame frames[MAX_CALL_FRAMES];
    int frame_count;

    /* Register file / value stack */
    Value *stack;
    int stack_size;
    int stack_capacity;
    int stack_top;       /* highest stack index in active use (for GC scanning) */

    /* Globals */
    Table globals;
    GlobalICEntry global_ic[GLOBAL_IC_SIZE];  /* inline cache for global lookups */
    FieldICEntry field_ic[FIELD_IC_SIZE];     /* inline cache for struct fields */
    MethodICEntry method_ic[METHOD_IC_SIZE];  /* inline cache for struct methods */
    DictICEntry dict_ic[DICT_IC_SIZE];        /* inline cache for dict string keys */

    /* Module cache (path -> exports dict) */
    Table modules;

    /* String interning */
    Table strings;

    /* Open upvalues (linked list) */
    ObjUpvalue *open_upvalues;

    /* Values retained explicitly by host-language bindings. */
    VMRoot *host_roots;

    /* Currently executing coroutine, if vm_execute was entered by coroutine.resume. */
    ObjCoroutine *current_coroutine;
    bool yield_requested;
    Value yield_values[256];
    int yield_count;
    Value native_return_values[256];
    int native_return_count;
    SavedVMContext *saved_contexts;
    atomic_bool cancel_requested;
    uint64_t deadline_ms;
    uint32_t loop_cancel_counter;
    uint32_t strings_interned_since_minor;

    /* Upvalue cache: direct-mapped by stack slot offset for O(1) capture */
    ObjUpvalue **upvalue_cache;
    int upvalue_cache_capacity;

    /* Defer stack */
    struct {
        ObjClosure **items;
        int count;
        int capacity;
    } defer_stack;

    /* Cooperative task queue used by task.run(). Host scheduler hooks can
       replace this later without exposing OS-thread ownership here. */
    struct {
        ObjClosure **items;
        int count;
        int capacity;
    } task_queue;

    /* Isolated VMs started by vm.spawn(). Running native threads keep their
       handles rooted here so GC cannot free a task object still owned by a
       worker thread. Completed tasks are untracked by join/try_join. */
    struct {
        ObjVMTask **items;
        int count;
        int capacity;
    } vm_tasks;

    /* Free-lists for frequently allocated objects */
    ObjClosure *closure_free_list;
    ObjUpvalue *upvalue_free_list;
    int closure_free_list_count;
    int upvalue_free_list_count;

    /* Integer-to-string cache: maps small non-negative integers to interned ObjString* */
    ObjString **int_str_cache;
    uint32_t *int_str_cache_used;
    int int_str_cache_used_count;
    int int_str_cache_used_capacity;

    /* Slab allocator: free lists and backing slabs for small objects */
    Obj  *slab_free_lists[SLAB_CLASS_COUNT];
    Slab *slab_blocks;

    /* GC state */
    Obj *young_objects;       /* young generation object list */
    Obj *old_objects;         /* old generation object list */
    size_t bytes_allocated;
    size_t young_bytes;       /* bytes in young generation only */
    size_t next_gc;
    bool minor_gc_active;     /* minor tracing ignores old-to-old edges */

    /* Remembered set: old-gen objects that reference young-gen objects */
    Obj **remembered_set;
    int remembered_count;
    int remembered_capacity;

    /* GC gray stack for tri-color marking */
    Obj **gray_stack;
    int gray_count;
    int gray_capacity;

    char last_error_message[512];
    char last_error_trace[2048];
    char last_error_file[256];
    char last_error_function[128];
    int last_error_line;
    bool suppress_error_output;  /* capture diagnostics without writing to stderr */
    void *calling_native_userdata;  /* set before native dispatch, for FFI trampolines */

    /* Stable argument snapshots for currently executing host callbacks. */
    NativeArgRoot *native_arg_roots;
};
typedef enum {
    INTERPRET_OK,
    INTERPRET_COMPILE_ERROR,
    INTERPRET_RUNTIME_ERROR,
    INTERPRET_YIELD
} InterpretResult;
MG_API VM *vm_new(void);
MG_API void vm_delete(VM *vm);
MG_API void vm_register_native(VM *vm, const char *name, NativeFn function,
                               int arity, void *userdata,
                               void (*userdata_finalizer)(void *));
MG_API ObjNativeHandle *vm_new_native_handle(
    VM *vm, const char *type_name, void *data, NativeHandleFinalizer finalizer);
MG_API bool vm_native_handle_set_method(
    VM *vm, ObjNativeHandle *handle, const char *name, NativeFn function,
    int arity, void *userdata, void (*userdata_finalizer)(void *));
MG_API void *vm_native_handle_data(Value value, const char *type_name);
MG_API Value vm_native_handle_value(ObjNativeHandle *handle);
MG_API bool vm_set_global_value(VM *vm, const char *name, Value value);
MG_API bool vm_get_global_value(VM *vm, const char *name, Value *out);
MG_API InterpretResult vm_interpret(VM *vm, const char *source);
MG_API InterpretResult vm_interpret_named(VM *vm, const char *source,
                                          const char *name);
MG_API InterpretResult vm_run_function(VM *vm, ObjFunction *function);
MG_API ObjFunction *vm_compile(VM *vm, const char *source);
MG_API ObjFunction *vm_compile_named(VM *vm, const char *source,
                                     const char *name);
MG_API void vm_push(VM *vm, Value value);
MG_API Value vm_pop(VM *vm);
MG_API VMRoot *vm_root_value(VM *vm, Value value);
MG_API bool vm_root_set(VM *vm, VMRoot *root, Value value);
MG_API Value vm_root_get(const VMRoot *root);
MG_API void vm_unroot_value(VM *vm, VMRoot *root);
MG_API const char *vm_last_error(VM *vm);
MG_API int vm_last_error_line(VM *vm);
MG_API void vm_clear_error(VM *vm);
/* VM introspection (safe accessors that do not depend on struct layout) */
MG_API void mg_runtime_error_simple(VM *vm, const char *message);
MG_API void *mg_get_native_userdata(VM *vm);
MG_API int vm_frame_count(VM *vm);
MG_API size_t vm_bytes_allocated(VM *vm);
/* String introspection. vm_string_chars() returns NULL for non-strings and
   unflattened ropes; vm_string_length() always returns the logical byte
   length of a string. Use the VM-aware helpers to flatten or copy safely. */
MG_API const char *vm_string_chars(Value value);
MG_API int vm_string_length(Value value);
MG_API bool vm_string_copy(VM *vm, Value value, char *buffer, size_t capacity,
                           size_t *required);
MG_API ObjString *copy_string(VM *vm, const char *chars, int length);
MG_API ObjArray *new_array(VM *vm);
MG_API ObjDict *new_dict(VM *vm);
MG_API void gc_major_collect(VM *vm);